--- a/static/css/single.css
+++ b/static/css/single.css
@@ -35,7 +35,11 @@ h1 {
 }
 
 h2 {
-    margin: 0.4em 0.6em;
+    margin: 1em 0.6em 0.4em 0.6em;
+}
+
+h3 {
+    margin: 1em 0.8em 0.4em 0.8em;
 }
 
 article {
